# banshee-community-extensions

./: .Makefile.include.swp  .gitattributes  .gitignore  .gitmodules  AUTHORS  BUGS  Banshee.AlarmClock.csproj  Banshee.AlarmClock.sln  Banshee.ClutterFlow.sln  Banshee.CoverWallpaper.addin.xml  Banshee.CoverWallpaper.csproj  Banshee.CoverWallpaper.make  Banshee.CoverWallpaper.sln  Banshee.OpenVP.sln  Banshee.RadioStationFetcher.sln  Banshee.RadioStationFetcher.userprefs  Banshee.Telepathy.sln  COPYING  ChangeLog  Extensions.sln  HACKING  LICENSE  Magnatune.mds  Makefile  Makefile.am  Makefile.in  Makefile.include  NEWS  OpenVP.mds  README  TODO  aclocal.m4  alarm.mdp  alarm.mds  autogen.sh  banshee-extension-streamrecorder_0.2.0-1ubuntu_all.deb  banshee-extension-streamrecorder_0.2.0-1ubuntu_i386.deb  banshee-extension-streamrecorder_0.2.1-1ubuntu_all.deb  banshee-extension-streamrecorder_0.2.1-2ubuntu_all.deb  banshee.coverwallpaper.pc.in  (+5 more)
Banshee/: AssemblyInfo.cs.in  Banshee.Plugins.Mirage.addin.xml  Banshee.Plugins.Mirage.addin.xml.in  Banshee.Plugins.Mirage.mdp  Banshee.Plugins.Mirage.pidb  Config.cs  Config.cs.in  ContinuousGeneratorSource.cs  Makefile.am  MirageConfiguration.cs  MiragePlugin.cs  PlaylistColumns.cs  PlaylistGeneratorSource.cs  PlaylistGeneratorView.cs  PlaylistModel.cs  SimilarityCalculator.cs
Banshee/TrackView.Columns/: AlbumColumn.cs  ArtistColumn.cs  DateAddedColumn.cs  DurationColumn.cs  GenreColumn.cs  LastPlayedColumn.cs  PlayCountColumn.cs  RatingColumn.cs  TitleColumn.cs  TrackNumberColumn.cs  TrackViewColumn.cs  UriColumn.cs  YearColumn.cs
Banshee/res/: ActiveSourceUI.xml  GlobalUI.xml  Makefile.am  MirageMenu.xml
BansheeLyricsPlugin/: Banshee.Lyrics.csproj  Banshee.Lyrics.sln  BansheeLyricsPlugin-mono.mds  ChangeLog  autogen.sh  config.h  config.status  configure.ac
BansheeLyricsPlugin/src/: AssemblyInfo.cs.in  AutoLyrics.cs  Banshee.Lyrics.addin.xml  Banshee.Lyrics.dll.mdb  BansheeLyricsPlugin-mono.mdp  BansheeLyricsPlugin.pidb.r93  BansheeLyricsPlugin.pidb.r97  CacheOperation.cs  Constants.cs  Lyrc.cs  LyricBaseSource.cs  Lyrics.dll.mdb  LyricsBrowser.cs  LyricsCache.cs  LyricsEvent.cs  LyricsHeader.cs  LyricsManager.cs  LyricsPlugin.cs  LyricsPluginCommon.cs  LyricsWindow.cs  Lyriki.cs  Lyriki2.cs  Makefile.am  ProxyManager.cs
Mirage/: AudioDecoder.cs  CovarianceMatrix.cs  Db.cs  Dbg.cs  Makefile.am  Matrix.cs  Mfcc.cs  Mir.cs  Mirage.mdp  Mirage.pidb  MirageDbMigrator.cs  Scms.cs  Timer.cs  Vector.cs
Mirage/res/: Makefile.am  dct.filter  filterweights.filter  writefilters.m
Test/: AssemblyInfo.cs.in  ChangeLog  Main.cs  Makefile.am  Test.mdp  Test.pidb
libmirageaudio/: Makefile.am  gst-mirageaudio.c  gst-mirageaudio.h  mirageaudiotest.c
src/: Alarm.cs  AlarmClockService.cs  AlarmConfigDialog.cs  AlarmMenu.xml  AlarmPlugin.cs  AssemblyInfo.cs  AssemblyInfo.cs.in  AwnPlugin.cs  Banshee.AlarmClock.addin.xml  Banshee.AlarmClock.addin.xml.in  Banshee.Telepathy.addin.xml  Banshee.Telepathy.csproj  Banshee.Telepathy.dll.config  BansheeAwn.mdp  BansheeAwn.mds  ConfigurationDialog.cs  ConfigurationSchema.cs  ConfigurationWidget.cs  GConfSchemas.cs  Makefile.am  SleepTimerConfigDialog.cs  VolumeFade.cs  banshee.telepathy.pc.in
src/.nuget/: nuget.targets
src/AlarmClock/: AlarmClock.addin.xml  AlarmClock.csproj  BUGS  Banshee.AlarmClock.addin.xml  Banshee.AlarmClock.addin.xml.in  Banshee.AlarmClock.csproj  Makefile.am  README
src/AlbumArtWriter/: AlbumArtWriter.addin.xml  AlbumArtWriter.csproj  Makefile.am
src/AlbumMetadataFixer/: AlbumMetadataFixer.addin.xml  AlbumMetadataFixer.csproj  AlbumMetadataFixer.fsproj  Banshee.AlbumMetadataFixer.addin.xml  Makefile.am
src/Ampache/: Ampache.addin.xml  Ampache.csproj  AssemblyInfo.cs  Makefile.am
src/AndroidRemote/: AndroidRemote.addin.xml  AndroidRemote.csproj  Makefile.am
src/AppIndicator/: AppIndicator.addin.xml  AppIndicator.csproj  Makefile.am
src/ArtistListCovers/: ArtistListCovers.addin.xml  ArtistListCovers.csproj  Makefile.am
src/Awn/: Awn.csproj  Banshee.Awn.addin.xml  Makefile.am
src/Banshee.Dap.Bluetooth/: Banshee.Dap.Bluetooth.fsproj  Makefile.am
src/Banshee.Telepathy/: TelepathyService.cs
src/Banshee.Telepathy.API/: Connection.cs  DispatchManager.cs
src/Banshee.Telepathy.DBus/: BaseProvider.cs  IMetadataProviderService.cs  IPlaylistProvider.cs  MetadataProviderService.cs  PlaylistProvider.cs
src/Banshee.Telepathy.Data/: ContactContainerSource.cs  ContactPlaylistSource.cs  ContactSource.cs  ContactTrackInfo.cs  DownloadMonitor.cs  IContactSource.cs  LibraryDownloadMonitor.cs  TelepathyDownload.cs  TelepathyDownloadManager.cs  TelepathyTransfer.cs  TelepathyUpload.cs  Transfer.cs  TransferList.cs  TransferManager.cs
src/Banshee.Telepathy.Gui/: DownloadManager.cs  DownloadManagerUi.cs  IncomingTubeDialog.cs  TelepathyActions.cs  TelepathyNotification.cs  TransferManager.cs  UploadManager.cs  UploadManagerUi.cs
src/Banshee.Telepathy.Net/: BaseWebServer.cs  StreamingHTTPProxyServer.cs  StreamingServer.cs
src/Bluetooth/: Banshee.Dap.Bluetooth.fsproj  Makefile.am
src/CacheService/: AssemblyInfo.fs  Cache.fs  CacheManager.fs  CacheService.fsproj  ICache.fs  Makefile.am
src/ClutterFlow/: Banshee.ClutterFlow.dll.config  Makefile.am
src/CoverWallpaper/: Banshee.CoverWallpaper.addin.xml  Banshee.CoverWallpaper.csproj  COPYING  Makefile.am
src/CueSheets/: CueSheets.addin.xml  CueSheets.csproj  Makefile.am
src/DuplicateSongDetector/: DuplicateSongDetector.addin.xml  DuplicateSongDetector.csproj  Makefile.am
src/FanArt/: FanArt.addin.xml  FanArt.csproj  Makefile.am  README
src/Fanart/: Fanart.addin.xml  Fanart.csproj  Fanart.sln  Makefile.am
src/FolderSync/: FolderSync.addin.xml  FolderSync.csproj  Makefile.am
src/Jamendo/: Jamendo.addin.xml  Jamendo.csproj  Makefile.am
src/Karaoke/: Karaoke.addin.xml  Karaoke.csproj  Makefile.am
src/LCD/: LCD.addin.xml  LCD.csproj  Makefile.am
src/LastfmFingerprint/: AUTHORS  Makefile.am  TODO
src/Lirc/: Banshee.Lirc.mds  Banshee.Lirc.pidb  Banshee.Lirc.userprefs  ChangeLog  Makefile.am
src/Lyrics/: AUTHORS  (+6 more)
(+1418 files in other folders)
