SUBDIRS = \
	AlarmClock \
	AlbumArtWriter \
	AlbumMetadataFixer \
	Ampache \
	AndroidRemote \
	AppIndicator \
	Awn \
	ClutterFlow \
	CoverWallpaper \
	DuplicateSongDetector \
	Fanart \
	FolderSync \
	Jamendo \
	Karaoke \
	LastfmFingerprint \
	LCD \
	Lirc \
	LiveRadio \
	Lyrics \
	Magnatune \
	Mirage \
	OpenVP \
	RadioStationFetcher \
	RandomByLastfm \
	SongKick \
	SongKickGeoLocation \
	StreamRecorder \
	Telepathy \
	ZeitgeistDataprovider

EXTRA_DIST = AssemblyInfo.cs.in

MAINTAINERCLEANFILES = Makefile.in
