SUBDIRS = \
	AlarmClock \
	AlbumArtWriter \
	Ampache \
	AndroidRemote \
	AppIndicator \
	Awn \
	Banshee.Dap.Bluetooth\
	ClutterFlow \
	CoverWallpaper \
	DuplicateSongDetector \
	Fanart \
	FolderSync \
	Jamendo \
	Karaoke \
	LastfmFingerprint \
	LCD \
	Lirc \
	LiveRadio \
	Lyrics \
	Magnatune \
	Mirage \
	OnlineMetadataFixer \
	OpenVP \
	RadioStationFetcher \
	RandomByLastfm \
	SongKick \
	SongKickGeoLocation \
	StreamRecorder \
	Telepathy \
	ZeitgeistDataprovider

EXTRA_DIST = AssemblyInfo.cs.in

MAINTAINERCLEANFILES = Makefile.in
