SUBDIRS = \
	AlarmClock \
	AlbumArtWriter \
	Ampache \
	AndroidRemote \
	AppIndicator \
	Awn \
	Bluetooth \
	ClutterFlow \
	CoverWallpaper \
	DuplicateSongDetector \
	FanArt \
	FolderSync \
	Jamendo \
	Karaoke \
	LastfmFingerprint \
	LCD \
	Lirc \
	LiveRadio \
	Lyrics \
	Magnatune \
	Mirage \
	OnlineMetadataFixer \
	OpenVP \
	RadioStationFetcher \
	RandomByLastfm \
	CacheService \
	SongKick \
	SongKickGeoLocation \
	StreamRecorder \
	Telepathy \
	ZeitgeistDataprovider

EXTRA_DIST = AssemblyInfo.cs.in

MAINTAINERCLEANFILES = Makefile.in
