ASSEMBLY = Banshee.AlarmClock
LINK = $(BANSHEE_LIBS)
ASSEMBLY_GCONF_SCHEMA = banshee-plugin-alarm.schemas.in

SOURCES = \
	Banshee.AlarmClock/Alarm.cs \
	Banshee.AlarmClock/AlarmClockService.cs \
	Banshee.AlarmClock/AlarmConfigDialog.cs \
	Banshee.AlarmClock/ConfigurationDialog.cs \
	Banshee.AlarmClock/ConfigurationSchema.cs \
	Banshee.AlarmClock/SleepTimerConfigDialog.cs \
	Banshee.AlarmClock/VolumeFade.cs

RESOURCES = \
	Banshee.AlarmClock.addin.xml \
	Resources/AlarmMenu.xml

include $(top_srcdir)/build/build.mk
